--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "morgan": "^1.10.0",
     "nodemon": "^2.0.15",
     "react": "^17.0.2",
+    "react-calendar": "^3.5.0",
     "react-dom": "^17.0.2",
     "webpack": "^5.64.4",
     "webpack-cli": "^4.9.1"
